--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </div>
 
 <div data-role="main" class="ui-content" >
-<div class="ui-btn" id="position">Posicion en msg.alert</div>
+<div class="ui-btn" id="posicion">Posicion en msg.alert</div>
 <div class="ui-btn" id="watch"> Posicion en movimiento(Watch)</div>
 
 <div >
